# cpswarm

./: .gitignore  .gitlab-ci.yml  .pylintrc  LABGROUP.md  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
path_planning/swarm-functions/area_division/: CMakeLists.txt  README.md  lely.txt  lely_logo.txt  package.xml
path_planning/swarm-functions/area_division/include/: area_division.h
path_planning/swarm-functions/area_division/include/lib/: area_division.h  connected_components.h
path_planning/swarm-functions/area_division/launch/: area_division.launch  area_path.launch
path_planning/swarm-functions/area_division/param/: area_division.yaml
path_planning/swarm-functions/area_division/src/: area_division.cpp  main.cpp  old_main.cpp
path_planning/swarm-functions/coverage_path/: CMakeLists.txt  README.md  coverage_path.launch  package.xml
path_planning/swarm-functions/coverage_path/include/: coverage_path.h
path_planning/swarm-functions/coverage_path/launch/: coverage_path.launch
path_planning/swarm-functions/coverage_path/param/: coverage_path.yaml
path_planning/swarm-functions/coverage_path/src/: coverage_path.cpp
src/control/teleop_slow/: CMakeLists.txt  package.xml  teleop_slow.launch
src/perception/yolov8_ros/launch/: yolo_v8.launch
src/perception/yolov8_ros/src/: yolo_v8.py
src/state-estimation/amcl/: command.sh
src/state-estimation/amcl/examples/: amcl_diff.launch
src/state-estimation/lidar_preprocess/: CMakeLists.txt  package.xml
src/tools/: laptop_config.sh  mirte_config.sh
(+11 files in other folders)
